editing creative live's page, adding coin ledger images

--- a/html/coinledger.html
+++ b/html/coinledger.html
@@ -23,8 +23,8 @@
 <div class="photo-container clearfix">
   <div class="subphoto subphoto-coinledger"></div>
   <div class="whitecard view-slides clickable">
-    <h4>an app to quietly help</h4>
-    <h5>passive job seekers</h5>
+    <h4>a site to organize</h4>
+    <h5>bitcoin investors</h5>
     <h6>view slides</h6>
   </div>
   <div class="eg-modal">
@@ -34,19 +34,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive center" src="http://eringallup.info/name/logo.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the project</h4>
-            <hr>
-            <p>This project was a sketch to test out the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
-            <p>The name and logo are designed to evoke trust and hint at exclusivity.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/1.png">
+            <img class="responsive" src="../images/coinledger/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the app : home</h4>
@@ -58,7 +46,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/3.png">
+            <img class="responsive" src="../images/coinledger/2.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>preferences</h4>
@@ -69,7 +57,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/4.png">
+            <img class="responsive" src="../images/coinledger/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>posted job</h4>
@@ -80,7 +68,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/5.png">
+            <img class="responsive" src="../images/coinledger/4.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>swiping up </h4>
@@ -92,7 +80,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/6.png">
+            <img class="responsive" src="../images/coinledger/5.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>company info &amp; perks</h4>
@@ -104,7 +92,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/1-1.png">
+            <img class="responsive" src="../images/coinledger/6.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the site</h4>
@@ -115,7 +103,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/2-1.png">
+            <img class="responsive" src="../images/coinledger/7.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the site : add job</h4>
@@ -126,7 +114,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/3-1.png">
+            <img class="responsive" src="../images/coinledger/8.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>step 2, add projects</h4>
@@ -137,7 +125,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/4-1.png">
+            <img class="responsive" src="../images/coinledger/9.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>step 3, company info</h4>
@@ -146,104 +134,6 @@
           </div>
         </div>
 
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/5-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 4, perks</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/6-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 5, keywords</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/7-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>success</h4>
-            <hr>
-            <p>Successfully posted jobs populate the home page.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/8-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>manage postings</h4>
-            <hr>
-            <p>The recruiter is notified when users have expressed interest in their job through clicking in the app.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/9-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>new matches</h4>
-            <hr>
-            <p>New matches are highlighted, which allow the recruiter to initiate a text conversation...</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/10-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>new matches : payment</h4>
-            <hr>
-            <p>Which they must pay to do.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/11-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>texting a candidate</h4>
-            <hr>
-            <p>Upon payment, the recruiter can text candidates from the desktop site.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/12-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>messages</h4>
-            <hr>
-            <p>The recruiter can manage all of their conversations for a particular job.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/16-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>landing page</h4>
-            <hr>
-            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
-          </div>
-        </div>
 
       </div>
     </div>
@@ -255,11 +145,12 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>Who are</h3>
-        <h4>passive job seekers?</h4>
+        <h4>bitcoin investors?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy with their current job and do not have time to do a search, but would be open to new opportunities. They only want to see jobs that they are qualified for and ones that they'd leave their current job for. They are frequently contacted by recruiters - many times at inopportune times and for jobs they are not interested in. </p>
+      <p>They’re people working in tech and in finance. Some of them mined bitcoins the currency’s infancy and watched their worth skyrocket. They are interested in strengthening the currency and see it as an investment vehicle. For security they often have their bitcoins spread across many different companies and need to see an aggregated view of their worth.</p>
+      <p>The structure of the currency is such that there are often multiple companies holding user’s bitcoins. There is also a great deal of volatility with the currency so being able to track its trading price is important.</p>
     </div>
   </div>
 </div>
@@ -268,29 +159,19 @@
   <div class="row">
     <div class="col-sm-12">
       <h4 class="project-title">The Project</h4>
-      <p class="lead">Create a system that reduces prospecting friction for passive job seekers.</p>
+      <p class="lead">Redesign Coin Ledger, a &lsquo;mint.com&rsquo; for bitcoin investors.</p>
     </div>
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/rarelead-logo.png"></div>
-      <h5>Logo</h5>
-      <p>Starts visual design and branding</p>
-    </div>
-    <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/screens/4.png"></div>
-      <h5>App</h5>
-      <p>Allows seekers to qualify themselves and show interest</p>
-    </div>
-    <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/7-1.png"></div>
+      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/2.png"></div>
       <h5>Site</h5>
-      <p>Allows recruiters to post jobs and contact prospects</p>
+      <p>Allows investors to track their coins, follow the market and calculate their taxes.</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/16-1.png"></div>
-      <h5>Lander</h5>
-      <p>Tests user interest while site is created</p>
+      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/8.png"></div>
+      <h5>Email</h5>
+      <p>Coordinating emails introduce users to features</p>
     </div>
   </div>
 </div>
@@ -320,22 +201,22 @@
   <div class="row details-items match-height distribute">
     <div class="details-item col-sm-3">
       <h5>Project Type</h5>
-      <p>proof of concept</p>
+      <p>redesign</p>
     </div>
     <div class="details-item col-sm-3">
       <h5>Time frame</h5>
-      <p>2 weeks</p>
+      <p>1 month</p>
     </div>
     <div class="details-item col-sm-3">
       <h5>Team</h5>
       <ul class="list-unstyled">
-        <li>product manager</li>
+        <li>engineer</li>
         <li>me</li>
       </ul>
     </div>
     <div class="details-item col-sm-3">
       <h5>Outcome</h5>
-      <p>prototypes</p>
+      <p>live site</p>
     </div>
   </div>
 </div>
