--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -34,51 +34,12 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/25.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>before</h4>
-            <hr>
-            <p>This was Creative Live's site when I arrived at the company. Users gave feedback that they had a hard time knowing what the company offered and how the service worked.</p>
-            <p>They weren't aware that there were classes happening at that moment that they could watch for free, and a catalog of classes they could buy.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/26.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>before</h4>
-            <hr>
-            <p>The &lsquo;watch now&rsquo; area was a pull down tab at the top of the page. It had a dark feeling to it. The rest of the navigation was cluttered with text.</p>
-            <p>In addition,the lime green color used around the site clashed with the course graphics.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/27.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>before</h4>
-            <hr>
-            <p>The calendar used was drawn in from Google. It was overwhelming to read as many classes happened at the same time and had long titles that were cut off.</p>
-          </div>
-        </div>
-
-
-
-
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="../images/creativelive/2.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>final design</h4>
+            <h4>website : home</h4>
             <hr>
-            <p>The final design which tested best with users implemented the &lsquo;watch now&rsquo; list area at the top of every page and inserted static information below the navigation.</p>
+            <p>Designed to inspire creative learners, the home page featured simple navigation and large hero imagery.</p>
           </div>
         </div>
 
@@ -87,54 +48,11 @@
             <img class="responsive" src="../images/creativelive/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>&lsquo;watch now&rsquo; pull down</h4>
+            <h4>the &lsquo;watch now&rsquo; tab</h4>
             <hr>
-            <p>The &lsquo;watch now&rsquo; area had a subtle video background of a bokeh pattern that subtly caught the user's eye and hinted at the inspirational quality of the classes.</p>
-          </div>
-        </div>
+            <p>Atop each page, a user could see classes that were free to watch at that moment by pulling down the &lsquo;watch now&rsquo; tab.</p>
 
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/4.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>channel colors</h4>
-            <hr>
-            <p>Because there were 5 differenet channels, I selected a colors to help users keep them straight and read less.</p>
-            <p>The colors had a checklist of needs including avoiding error-message red and colors that would not be legible.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/5.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>channel icons</h4>
-            <hr>
-            <p>The original icons were created by an outside agency. I created this set in the same style to address clarity complaints of the original set. In the end the original icons were kept.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/6.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>special event pages</h4>
-            <hr>
-           <p>Conference pages were designed to look different than class pages.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/7.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>class pages</h4>
-            <hr>
-            <p>The design of class pages for sale nudged users to buy the class to &lsquo;unlock&rsquo; videos.</p>
+            <p>Behind the area, a subtle patterned video guides the eye to the area without distracting from reading.</p>
           </div>
         </div>
 
@@ -143,76 +61,31 @@
             <img class="responsive" src="../images/creativelive/8.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>catalog page</h4>
+            <h4>catalog</h4>
             <hr>
-            <p>The catalog page used light gray backgrounds to group class &lsquo;cards&rsquo; for sale.</p>
+            <p>Learners could quickly browse the back catalog with a simple filtering system.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/9.png">
+            <img class="responsive" src="../images/creativelive/7.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>live classes page</h4>
+            <h4>class page</h4>
             <hr>
-            <p>Classes shown with a dark background signified that they were being shown now for free.</p>
+            <p>The class page allows users to see what they would get with their purchase.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/10.png">
+            <img class="responsive" src="../images/creativelive/6.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>calendar, before</h4>
+            <h4>event page</h4>
             <hr>
-            <p>The calendar page used before the redesign was drawn in from Google. It was overwhelming to read and did not coordinate.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/11.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>calendar v.1</h4>
-            <hr>
-            <p>My initial design for the new calendar used a &lsquo;tv guide&rsquo; model. My hunch was that users wanted to see what was on now and later on in the week.</p>
-            <p>However after its release, the calendar had negative feedback from users. We had to research what users were using the calendar to do.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/12.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>calendar test, #1</h4>
-            <hr>
-            <p>This design was used to see if the users wanted a small calendar to help them put time into perspective...</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/13.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>calendar test, #2</h4>
-            <hr>
-            <p>... or if they wanted a month-style view of the calendar.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/14.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>calendar test, #3</h4>
-            <hr>
-            <p>The third design option was most popular and showed us what users were using the calendar for: to show them a list of what was upcoming and allow them to easily get reminders for it.</p>
+            <p>The event page anounces upcoming conferences.</p>
           </div>
         </div>
 
@@ -221,9 +94,9 @@
             <img class="responsive" src="../images/creativelive/15.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>calendar, final design</h4>
+            <h4>calendar list</h4>
             <hr>
-            <p>New matches are highlighted, which allow the recruiter to initiate a text conversation...</p>
+            <p>The calendar list allows a user to browse upcoming courses and rsvp to the live broadcast.</p>
           </div>
         </div>
 
@@ -232,9 +105,9 @@
             <img class="responsive" src="../images/creativelive/16.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>new matches : payment</h4>
+            <h4>mobile app</h4>
             <hr>
-            <p>Which they must pay to do.</p>
+            <p>A simplified app allows learners to watch broadcasted classes and ones they've purchased on the go.</p>
           </div>
         </div>
 
@@ -243,9 +116,9 @@
             <img class="responsive" src="../images/creativelive/17.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>texting a candidate</h4>
+            <h4>navigation</h4>
             <hr>
-            <p>Upon payment, the recruiter can text candidates from the desktop site.</p>
+            <p>Clicking the hamburger icon slid over a simple navigation pane.</p>
           </div>
         </div>
 
@@ -254,9 +127,9 @@
             <img class="responsive" src="../images/creativelive/18.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>messages</h4>
+            <h4>my classes</h4>
             <hr>
-            <p>The recruiter can manage all of their conversations for a particular job.</p>
+            <p>The &lsquo;my classes&rsquo; section contains classes the user purchased.</p>
           </div>
         </div>
 
@@ -265,42 +138,9 @@
             <img class="responsive" src="../images/creativelive/19.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>landing page</h4>
+            <h4>class</h4>
             <hr>
-            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/20.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>landing page</h4>
-            <hr>
-            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/21.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>landing page</h4>
-            <hr>
-            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/22.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>landing page</h4>
-            <hr>
-            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
+            <p>Purchased class videos are available within each class. The user can click on a video within the list to play at the top.</p>
           </div>
         </div>
 
@@ -309,9 +149,9 @@
             <img class="responsive" src="../images/creativelive/23.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>landing page</h4>
+            <h4>class video player</h4>
             <hr>
-            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
+            <p>Classes broadcast live are played in an immersive environment designed to allow the user to focus.</p>
           </div>
         </div>
 
@@ -320,11 +160,13 @@
             <img class="responsive" src="../images/creativelive/24.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>landing page</h4>
+            <h4>questions drawer</h4>
             <hr>
-            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
+            <p>Users can pull out drawers to ask questions and chat with other students, allowing them to interact with the live class.</p>
           </div>
         </div>
+
+
 
       </div>
     </div>
@@ -351,12 +193,12 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>Who is</h3>
-        <h4>creative live?</h4>
+        <h3>About</h3>
+        <h4>the company</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Creative Live is a startup that creates long form educational video classes for people in creative fields. Classes touch all aspects of a creative's career- from improving techniques and mastering software to improving sales and marketing. Users can watch classes free when they are broadcast or purchase any time access.</p>
+      <p>Creative Live is a startup that creates long form educational video courses for people in creative fields. Courses touch all aspects of a creative's career- from techniques and software to sales and marketing. Users can watch classes free when they are broadcast or purchase any time access.</p>
       <p>I worked at Creative Live for over a year, redesigning their website and working on features like the calendar, mobile app and video classroom.</p>
     </div>
   </div>
@@ -393,31 +235,32 @@
   </div>
 </div>
 
-<div class="details container">
+<div class="body-container container">
   <div class="row">
-    <div class="col-sm-12">
-      <h4 class="details-title">Details</h4>
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>old design</h3>
+        <h4>problems</h4>
+      </div>
+    </div>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>Users of the old design gave the feedback that they had trouble understanding what the company could do for them. They did not know that there was a live class happening right at that time that they could watch for free. They also had trouble comprehending the videos on the class page as it involved a lot of scrolling. Catalog pages had a very complex filtering system that required a lot of reading. Live broadcast pages looked very similar to class pages so there was confusion around what was live and what was paid. </p>
     </div>
   </div>
-  <div class="row details-items match-height distribute">
-    <div class="details-item col-sm-3">
-      <h5>Project Type</h5>
-      <p>proof of concept</p>
+</div>
+
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>new design</h3>
+        <h4>solutions</h4>
+      </div>
     </div>
-    <div class="details-item col-sm-3">
-      <h5>Time frame</h5>
-      <p>2 weeks</p>
-    </div>
-    <div class="details-item col-sm-3">
-      <h5>Team</h5>
-      <ul class="list-unstyled">
-        <li>product manager</li>
-        <li>me</li>
-      </ul>
-    </div>
-    <div class="details-item col-sm-3">
-      <h5>Outcome</h5>
-      <p>prototypes</p>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>With the redesign, I started by simplifying the navigation to allow for less user reading. I incorporated imagery of actual productions into the home page that would describe what Creative Live did, allowing for less text to be used. Instead of having one corporate color for links, I assigned colors to each vertical to allow the user to quickly remember the vertical they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
+      <p>On catalog pages I simplified the filtering mechanism. On calendar pages we ran tests to see how the calendar was used and found that a list view was optimal. To address the confusion between what was live and what was paid, I devised a system of dark gray background colors for live classes and light gray colors for classes requiring payment. For the class pages, I kept the videos above the fold for ease of browsing.</p>
+      <p>Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them, including selecting a complementary font that had a smooth handwriting feel.</p>
     </div>
   </div>
 </div>
@@ -431,12 +274,45 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Insert twitter comments.</p>
+      <img class="responsive" src="../images/creativelive/testimonials.png"></div>
     </div>
   </div>
 </div>
 
-
+<div class="details container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h4 class="details-title">Details</h4>
+    </div>
+  </div>
+  <div class="row details-items match-height distribute">
+    <div class="details-item col-sm-3">
+      <h5>Project Type</h5>
+      <p>redesign</p>
+    </div>
+    <div class="details-item col-sm-3">
+      <h5>Time frame</h5>
+      <ul class="list-unstyled">
+        <li>redesign: 2 mo.</li>
+        <li>calendar: 1 mo.</li>
+        <li>app: 1 mo.</li>
+        <li>viewer: 3 mo.</li>
+      </ul>
+    </div>
+    <div class="details-item col-sm-3">
+      <h5>Team</h5>
+      <ul class="list-unstyled">
+        <li>2 product managers</li>
+        <li>engineering team</li>
+        <li>me</li>
+      </ul>
+    </div>
+    <div class="details-item col-sm-3">
+      <h5>Outcome</h5>
+      <p>live site</p>
+    </div>
+  </div>
+</div>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
